added span tags to location and doors open

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -24,13 +24,16 @@
                 <a href="#">See More</a>
             </nav>
             
-            <p>Location: Park City, Utah</p>
-            <p>CDoors open 9:30am</p>
+            <p>
+                <span>Location:</span> Park City, Utah</p>
+            <p>
+                <span>Doors Open:</span> 9:30am Front Gate Only</p>
             <nav>
                 <a href="#">Details</a>
             </nav>
             
             </section>
+            <span></span>
     <section>
                     <h1>Snowboarding Starts Tomorrow</h1>
                     <a href="#">Start Here</a>
