--- a/deploy/index.html
+++ b/deploy/index.html
@@ -113,12 +113,10 @@
                             </section>
                                 <H1>Follow Us</H1>
                                 <ul>
-                                    <li>
-                                        <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
-                                        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                                        <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-                                    </li>
+                                    <li> <a href="https://www.youtube.com"><i class="fa-brands fa-square-youtube"></i></a>  </li>
+                                    <li><a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram"></i></a></li>
+                                    <li><a href="https://www.twitter.com"><i class="fa-brands fa-square-twitter"></i></a></li>
                                 </ul>
                                 
                             </section>
