--- a/deploy/index.html
+++ b/deploy/index.html
@@ -174,10 +174,10 @@
                     <section id="socialmedia">
                         <H1>Follow Us</H1>
                         <ul>
-                            <li> <a href="https://www.youtube.com"><i class="fa-brands fa-square-youtube"></i></a> </li>
-                            <li><a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook"></i></a></li>
-                            <li><a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram"></i></a></li>
-                            <li><a href="https://www.twitter.com"><i class="fa-brands fa-square-twitter"></i></a></li>
+                            <li id="logo1"> <a href="https://www.youtube.com"><i class="fa-brands fa-square-youtube"></i></a> </li>
+                            <li id="logo2"><a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook"></i></a></li>
+                            <li id="logo3"><a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram"></i></a></li>
+                            <li id="logo4"><a href="https://www.twitter.com"><i class="fa-brands fa-square-twitter"></i></a></li>
                         </ul>
                     </section>
                 </div>
