--- a/deploy/index.html
+++ b/deploy/index.html
@@ -172,9 +172,7 @@
             
                     <section id="newsletter">
                         <h1>Newsletter Sign Up</h1>
-                        <form action="#">
-                            <input type="email" placeholder="Email Address">
-                        </form>
+                        <input action="#" type="email" placeholder="Email Address">
                         <button class= "buttoncolor" >Sign Up</button>
                     </section>
             
