--- a/deploy/index.html
+++ b/deploy/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c09e683120.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
     <title>Starting Template</title>
@@ -51,7 +51,9 @@
                         <li id="info-1">
                             <h1>What to Bring?</h1>
                             <p>Click here for a checklist of what to bring</p>
-                            <nav> <a href="#">See More</a> </nav>
+                            <aside>
+                                <nav> <a href="#">See More</a> </nav>
+                            </aside>
                         </li>
             
             
@@ -59,7 +61,9 @@
                         <li id="info-2">
                             <p> <span><b>Location:</b></span> Park City, Utah</p>
                             <p> <span>Doors Open:</span> 9:30am Front Gate Only</p>
+                           <aside>
                             <nav> <a href="#">Details</a> </nav>
+                           </aside> 
                         </li>
                     </ul>
                 </div>
