--- a/deploy/index.html
+++ b/deploy/index.html
@@ -128,8 +128,8 @@
               </li>
         
               <li id="c2">
-                 <div class="card-img"></div>
-                 <!-- <img src="img/whatsnew/mobiletrick.jpg" alt="mobile article" class="aboutimages"> -->
+                 <!-- <div class="card-img"></div> -->
+                 <img src="img/whatsnew/mobiletrick.jpg" alt="mobile article" class="aboutimages">
                  <section>
                     <h1 class="newheadline">Extreme Snowmobiling is in</h1>
                     <p>The rise of viewership has jumped tremendously this year for our snowmobile events.</p>
@@ -141,8 +141,8 @@
               </li>
         
               <li id="c3">
-                 <!-- <div class="card-img"></div> -->
-                 <img src="img/whatsnew/womangold.jpg" alt="woman article" class="aboutimages">
+                 <div class="card-img"></div>
+                 <!-- <img src="img/whatsnew/womangold.jpg" alt="woman article" class="aboutimages"> -->
                  <section>
                     <h1 class="newheadline">WOMENS SKI RECORD SET</h1>
                     <p>This year the women's ski freestyle record 720 spin has been achieved!</p>
