--- a/deploy/index.html
+++ b/deploy/index.html
@@ -144,8 +144,8 @@
               </li>
         
               <li id="c3">
-                 <!-- <div class="card-img"></div> -->
-                 <img src="img/whatsnew/womangold.jpg" alt="woman article" class="aboutimages">
+                 <div class="card-img"></div>
+                 <!-- <img src="img/whatsnew/wn3.jpg" alt="woman article" class="aboutimages"> -->
                  <section>
                     <h1 class="newheadline">WOMENS SKI RECORD SET</h1>
                     <p>This year the women's ski freestyle record 720 spin has been achieved!</p>
